--- a/starter/index.html
+++ b/starter/index.html
@@ -30,6 +30,11 @@
         <div id="choices" class="choices"></div>
       </div>
 
+      <div id="ans-result" class="hide">
+        <hr>
+        <p id="result"></p>
+    </div>
+
       <div id="end-screen" class="hide">
         <h2>All done!</h2>
         <p>Your final score is <span id="final-score"></span>.</p>
