--- a/starter/index.html
+++ b/starter/index.html
@@ -49,5 +49,6 @@
 
     <script src="./assets/js/question.js"></script>
     <script src="./assets/js/logic.js"></script>
+    <script src="./scores.js"></script>
   </body>
 </html>
